k8s-nginx-ingress-manifests/web_deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: web
  labels:
    app: webapp-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-ms
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webapp-ms
        tier: frontend
    spec:
      containers:
      - image: rascalbrick/php-apache
        name: webapp-ms
        ports:
        - containerPort: 80
        - containerPort: 443
