k8s-nginx-ingress-manifests/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: webapp-ms
spec:
  ports:
    - name: mysql
      port: 3306
  selector:
    app: webapp-ms
    tier: mysql
  clusterIP: None
