k8s-nginx-ingress-manifests/phpmyadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 8280
    targetPort: 80
