k8s-nginx-ingress-manifests/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: webapp-ms
spec:
  ports:
    - name: http
      port: 80
    - name: https
      port: 443
  selector:
    app: webapp-ms
    tier: frontend
  type: LoadBalancer
