k8s-nginx-ingress-manifests/lamp-webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lamp-webapp-ms
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webdemok8.ms-biznetgio.net
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: phpmyadmin-demok8.ms-biznetgio.net
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 8280
